<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/series_bg_repeat" >

    <ImageView
        android:id="@+id/navigator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@null" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >

            <ImageButton
                android:id="@+id/animals"
                android:layout_width="147dp"
                android:layout_height="107dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/watermark_big_green_bg"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/doyouknow_cat_2" />

            <TextView
                android:id="@+id/animals_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animals"
                android:gravity="center_horizontal"
                android:lines="2"
                android:text="@string/do_you_know_1"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >

            <ImageButton
                android:id="@+id/human"
                android:layout_width="147dp"
                android:layout_height="107dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/watermark_big_green_bg"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/doyouknow_cat_0" />

            <TextView
                android:id="@+id/human_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/human"
                android:gravity="center_horizontal"
                android:lines="2"
                android:text="@string/do_you_know_2"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearLayout1" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >

            <ImageButton
                android:id="@+id/food"
                android:layout_width="147dp"
                android:layout_height="107dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/watermark_big_green_bg"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/doyouknow_cat_1" />

            <TextView
                android:id="@+id/food_label"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/food"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:lines="2"
                android:text="@string/do_you_know_3"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >

            <View
                android:layout_width="147dp"
                android:layout_height="107dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>